--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
-    "mongoose": "^4.5.8"
+    "jwt-simple": "^0.5.0",
+    "mongoose": "^4.5.8",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.1.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
