--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^4.5.8",
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "twilio": "^2.9.2"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
